--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="hero">
-        <audio autoplay loop src="aanthem.mp3" type="audio/mpeg"></audio>
+        <audio autoplay loop src="https://hamzaelasmar.github.io/ksa93/aanthem.mp3?raw=true" type="audio/mpeg"></audio>
         <h1 class="title">نحلم ونحقق</h1>
         <img src="Wall_01.png" alt="" class="heroimg" id="op">
         <h1 class="desc1">شعار اليوم الوطني السعودي 93</h1>
